# scraper-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
kubernetes/: deploy-scraper-api.yaml
scraper_api/: settings.py  utils.py  validations.py
scraper_api/api/: main.py
scraper_api/api/api_v1/: api.py
scraper_api/api/api_v1/endpoints/: scraper.py
scraper_api/api/core/: config.py
scraper_api/api/schemas/: schemas.py  validations.py
scraper_api/scraper/: base_scraper.py  run.py
scraper_api/scraper/request_scraper/: run.py
scraper_api/scraper/request_scraper/spiders/: base_spider.py  growatt.py
scraper_api/scraper/solar_scraper/: items.py  middlewares.py  pipelines.py  run.py  scrapy.cfg  settings.py
scraper_api/scraper/solar_scraper/spiders/: base_spider.py  refulog.py
scraper_api/tests/: conftest.py  test_utils.py
scraper_api/tests/api/: test_api.py
scraper_api/tests/scraper/: test_scraper.py
